# glass

./: .gitignore  ARCH_TODO.md  Cargo.toml  DOCS.md  IDEAS.md  README.md  TODO.md
crates/mpq/: Cargo.toml  LICENSE
crates/mpq/src/: archive.rs  consts.rs  creator.rs  error.rs  header.rs  lib.rs  seeker.rs  table.rs  util.rs
docs/: jass-reference.md
editors/zed-glass/: .gitignore  Cargo.toml  extension.toml
examples/: add.glass  arena_test.glass  axes_rexxar.glass  buff_system.glass  chain_lightning.glass  elm_counter.glass  elm_timer.glass  greater_bash.glass  hook_demo.glass  invoker.glass  item_combine.glass  rune_system.glass  sdk_smoke.glass  stdlib_smoke.glass  tower_defense.glass  types.glass
examples/game/: main.glass
examples/pudge_wars/: arena.glass  barricade.glass  blade_barrier.glass  commands.glass  fog_transition.glass  hints.glass  hook.glass  items.glass  main.glass  messages.glass  mines.glass  powerup.glass  scoring.glass  sounds.glass  types.glass
sdk/: color.glass  dict.glass  effect.glass  effect_exec.glass  float.glass  int.glass  list.glass  math.glass  option.glass  result.glass  set.glass  string.glass  subscription.glass
sdk/jass/: math.glass  sfx.glass  unit.glass
sdk/wc3/: ability.glass  camera.glass  destructable.glass  fog.glass  force.glass  group.glass  item.glass  math.glass  multiboard.glass  order.glass  pathability.glass  player.glass  rect.glass  region.glass  sfx.glass  sound.glass  time.glass  timer.glass  ui.glass  unit.glass
src/: ast.rs  beta.rs  closures.rs  codegen.rs  codegen_tests.rs  const_prop.rs  dce.rs  exhaustive.rs  free_vars.rs  infer.rs  inline.rs  jass_parser.rs  lift.rs  linearity.rs  lsp.rs  lua_codegen.rs  lua_runtime.rs  main.rs  modules.rs  mono.rs  mpq.rs  optimize.rs  parser.rs  resolve_const_patterns.rs  runtime.rs  suggest.rs  tco.rs  token.rs  type_env.rs  type_repr.rs  types.rs  unify.rs
src/codegen/: closure.rs  expr.rs  mod.rs  mono.rs  pattern.rs  soa.rs
src/infer/: expr.rs  mod.rs  pattern.rs  resolve.rs
src/snapshots/: glass__codegen__tests__case_bool.snap  glass__codegen__tests__constructor_call.snap  glass__codegen__tests__empty_list.snap  glass__codegen__tests__field_access.snap  (+145 more)
tests/: common_stub.j  jass_validity.rs  lua_validity.rs  patch.rs
tree-sitter-glass/: grammar.js  package-lock.json  package.json  tree-sitter.json
(+29 files in other folders)
