[package]
name = "glass"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
logos = "0.15"
miette = { version = "7", features = ["fancy"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
mpq-rs = { git = "https://github.com/WarRaft/mpq-rs", rev = "6deaea23" }

[dev-dependencies]
insta = "1"
rstest = "0.25"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
unimplemented = "deny"
dbg_macro = "deny"

indexing_slicing = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"

fallible_impl_from = "deny"

match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"

if_not_else = "deny"
needless_continue = "deny"
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
clone_on_copy = "deny"

undocumented_unsafe_blocks = "deny"
