[package]
name = "mpq"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pure Rust reader/writer for Blizzard MPQ archives (Warcraft III)"

[dependencies]
byteorder = "1.5"
lazy_static = "1.5"
byte-slice-cast = "1.2"
flate2 = "1.1"
bzip2 = "0.6"
indexmap = "2"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
unimplemented = "deny"
dbg_macro = "deny"

indexing_slicing = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"

fallible_impl_from = "deny"

match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"

if_not_else = "deny"
needless_continue = "deny"
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
clone_on_copy = "deny"

undocumented_unsafe_blocks = "deny"
